plugins {
    id "java"
    id "org.jetbrains.intellij" version "0.6.3"
    id "org.jetbrains.changelog" version "1.0.1"
    id "org.jetbrains.grammarkit" version "2020.2.1"
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

group = pluginGroup
version = pluginVersion

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.13.1'
}

sourceSets.main.java.srcDirs 'src/main/gen'

apply plugin: 'idea'
intellij {
    pluginName = pluginName
    version = platformVersion
    type = platformType
    downloadSources = platformDownloadSources.toBoolean()
    updateSinceUntilBuild = true

    runIde {
        jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
    }
}

publishPlugin {
    dependsOn patchChangelog
    token(System.getenv("PUBLISH_TOKEN"))
}

apply plugin: 'org.jetbrains.changelog'
patchPluginXml {
    version = pluginVersion
    sinceBuild = pluginSinceBuild
    untilBuild = pluginUntilBuild
    patchPluginXml {
        changeNotes({ changelog.getUnreleased().toHTML() })
    }
}

// Lexer generation ===========================================================
apply plugin: 'org.jetbrains.grammarkit'
import org.jetbrains.grammarkit.tasks.GenerateLexer
import org.jetbrains.grammarkit.tasks.GenerateParser

task generateThingsParser(type: GenerateParser) {
    source = "src/main/java/com/github/openhab/language/things/Things.bnf"
    targetRoot = 'src/main/gen'
    pathToParser = '/com/github/openhab/language/things/parser/ThingsParser.java'
    pathToPsiRoot = '/com/github/openhab/language/things/psi'
    purgeOldFiles = true
}

task generateItemsParser(type: GenerateParser) {
    source = "src/main/java/com/github/openhab/language/items/Items.bnf"
    targetRoot = 'src/main/gen'
    pathToParser = '/com/github/openhab/language/items/parser/ItemsParser.java'
    pathToPsiRoot = '/com/github/openhab/language/items/psi'
    purgeOldFiles = true
}

task generateThingsLexer(type: GenerateLexer) {
    source "src/main/java/com/github/openhab/language/things/Things.flex"
    targetDir "src/main/gen/com/github/openhab/language/things"
    targetClass "ThingsLexer"
    purgeOldFiles true
}

task generateItemsLexer(type: GenerateLexer) {
    source "src/main/java/com/github/openhab/language/items/Items.flex"
    targetDir "src/main/gen/com/github/openhab/language/items"
    targetClass "ItemsLexer"
    purgeOldFiles true
}

task generateRulesParser(type: GenerateParser) {
    source = "src/main/java/com/github/openhab/language/rules/Rules.bnf"
    targetRoot = 'src/main/gen'
    pathToParser = '/com/github/openhab/language/rules/parser/RulesParser.java'
    pathToPsiRoot = '/com/github/openhab/language/rules/psi'
    purgeOldFiles = true
}

task generateRulesLexer(type: GenerateLexer) {
    source "src/main/java/com/github/openhab/language/rules/Rules.flex"
    targetDir "src/main/gen/com/github/openhab/language/rules"
    targetClass "RulesLexer"
    purgeOldFiles true
}

compileJava {
    dependsOn generateThingsParser
    dependsOn generateThingsLexer

    dependsOn generateItemsParser
    dependsOn generateItemsLexer

    dependsOn generateRulesParser
    dependsOn generateRulesLexer
}

compileJava.options.encoding = 'UTF-8'